--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<p>First div contain a h1 with id f1 and content "Flowers photos" and a paragraph tag to show the information of the flower.</p>
 	</div>
 	<div>
-		<h1 id="f2">Roses picture</h1>
+		<h1 id="f2">Roses pictures</h1>
 		<p>Second div contain a h1 with id f2 and content "Roses picture" and a paragraph tag to show the information of the flower</p>
 	</div>
     <script type="text/javascript" src="./script.js">
